# -Live-living-engine-backtest

./: .gitignore  README.md  pyproject.toml  runner.py
.github/workflows/: ci.yml
configs/: default.yaml  symbols.yaml
data/: sample_prices.csv
data/sample/: sample_ohlcv.csv
src/engine/: __init__.py  data.py  metrics.py  narrative.py  proofbridge.py  strategy_api.py
src/engine/strategies/: __init__.py  imm_core_v11.py
src/engine/strategies/adapters/: __init__.py  nt8_adapter.py
src/runner/: __init__.py  backtest.py  cli.py
tests/: test_data_loader.py  test_metrics.py  test_strategy_smoke.py
